// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.internal.resources;

option go_package = "namespacelabs.dev/foundation/internal/resources";

import "std/runtime/deployable.proto";

message OpWaitForProviderResults {
    foundation.std.runtime.Deployable deployable = 1;
}